# rosewood

./: .bumpversion.cfg  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
.copr/: fedora.spec
cmake/: CMakeDetermineMCCompiler.cmake  CMakeDetermineMcCompiler.cmake.in  CMakeMCCompiler.cmake.in  CMakeMcCompiler.cmake.in  CMakeMcInformation.cmake.in  CMakeTestMcCompiler.cmake.in  mc-config.cmake.in  mc.cmake  rosewood-config.cmake.in  rosewood.cmake
docs/: export_rules.md
images/alpine/: Dockerfile
images/archlinux/: Dockerfile
images/centos7/: Dockerfile
images/fedora30/: Dockerfile
images/fedora33/: Dockerfile
images/opensuse/leap/: Dockerfile
images/opensuse/tumbleweed/: Dockerfile
images/ubuntu-19.04/: Dockerfile
include/mc/: MetaClass.h  MetaDecl.h  MetaType.h  MetadataStore.h  Metal.h  MetalConfig.h  QualType.h  Reflection.h  dynamic_mc.hpp  index.hpp  mc.hpp  type.hpp
include/rosewood/: index.hpp  rosewood.hpp  runtime.hpp  type.hpp
lib/: CMakeLists.txt  MetaClass.cpp  MetaType.cpp  MetadataStore.cpp  dynamic_mc.cpp  index.cpp  runtime.cpp
moose/: CMakeLists.txt  Lexer.h  ast.cpp  driver.cpp  driver.h  moose.cpp  parser.y  scanner.l
moose/moose/: ast.h  moose.hpp
src/: CMakeLists.txt  ClangInfrastructure.cpp  ClangInfrastructure.h  CodeGeneratorBase.cpp  CodeGeneratorBase.h  GeneratingASTVisitor.cpp  GeneratingASTVisitor.h  IdentifierHelper.cpp  IdentifierHelper.h  IdentifierRepository.cpp  IdentifierRepository.h  MetaContext.h  MetaPreambleHeaderGenerator.cpp  MetaPreambleHeaderGenerator.h  ReflectionDataGenerator.cpp  ReflectionDataGenerator.h  RuntimeReflectionDataSourceGenerator.cpp  RuntimeReflectionDataSourceGenerator.h  SourceElements.cpp  SourceElements.h  SourceFile.cpp  SourceFile.h  StaticReflectionDataHeaderGenerator.cpp  StaticReflectionDataHeaderGenerator.h  clang_infrastructure.cpp  clang_infrastructure.h  main.cpp
test/: BasicDefinitions.cpp  BasicDefinitions.h  CMakeLists.txt  Jinx.cpp  Jinx.h  TemplateDeclarations.h  main.cpp
